<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:background="#000"
        android:orientation="vertical">
        <TextView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="right|bottom"
            android:layout_weight="25"
            android:text="0"
            android:textSize="50dp"
            android:textColor="#FFF" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:onClick="clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/clear"
                android:textColor="#000"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"/>
            <Button
                android:layout_width="0dp"
                android:onClick="negativeButton"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/negative"
                android:textColor="#000"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"/>
            <Button
                android:onClick="percentButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/percent"
                android:textColor="#000"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"/>
            <Button
                android:id="@+id/divide"
                android:onClick="operationButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/division"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_rounded_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/seven"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:text="@string/seven"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/eight"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/eight"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/nine"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:text="@string/nine"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/times"
                android:onClick="operationButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/multiply"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_rounded_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/four"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/four"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/five"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/five"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/six"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/six"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/minus"
                android:onClick="operationButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/minus"
                android:textColor="#FFF"
                android:textSize="60dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_rounded_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/one"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/one"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/two"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/two"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/three"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/three"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:id="@+id/plus"
                android:onClick="operationButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/plus"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_rounded_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:orientation="horizontal"
            android:weightSum="100">
            <Button
                android:id="@+id/zero"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/zero"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>

            <Button
                android:id="@+id/point"
                android:onClick="numberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/point"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded_button"/>
            <Button
                android:onClick="equalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="@string/equal"
                android:textColor="#FFF"
                android:textSize="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_rounded_button"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>